--- a/flashcard-backend/package.json
+++ b/flashcard-backend/package.json
@@ -11,6 +11,7 @@
   "author": "Kody Lee",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.0",
     "express": "^4.21.2",
